--- a/007.loadingAnimation/index.html
+++ b/007.loadingAnimation/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Korey`s blog">
 	<link rel="shortcut_icon" href="">
 
-	<link rel="stylesheet" type="text/css" href="css/jquery.fullpage.css">
+	<link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
 	<link rel="stylesheet" type="text/css" href="css/loadingAnimation.css">
 	
 </head>
@@ -28,7 +28,7 @@
 	</section>
 
 	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jquery.fullpage.min.js"></script>
+	<script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
 	<script type="text/javascript" src="js/loadingAnimation.js"></script>
 </body>
 </html>
