--- a/008.game2048/index.html
+++ b/008.game2048/index.html
@@ -50,6 +50,7 @@
 
 	<!-- files about javascript -->
 	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script src="//cdn.bootcss.com/jquery.touchswipe/1.6.18/jquery.touchSwipe.js"></script>
 	<script type="text/javascript" src="js/base.js"></script>
 	<script type="text/javascript" src="js/game2048.js"></script>
 </body>
