--- a/008.game2048/index.html
+++ b/008.game2048/index.html
@@ -17,8 +17,10 @@
 		<h1 class="title">2048</h1>
 		<a href="javascript:void(0)" onclick="" class="newGame">NEW GAME</a>
 		<div class="score">
-			<p>score</p>
-			<p class="scoreNum">0</p>
+			<div class="scoreContainer">
+				<p>score</p>
+				<p class="scoreNum">0</p>
+			</div>
 		</div>
 	</header>
 	
