--- a/008.game2048/index.html
+++ b/008.game2048/index.html
@@ -17,7 +17,7 @@
 		<h1 class="title">2048</h1>
 		<a href="javascript:void(0)" onclick="" class="newGame">NEW GAME</a>
 		<div class="score">
-			<div class="scoreContainer">
+			<div class="<!-- scoreContainer -->">
 				<p>score</p>
 				<p class="scoreNum">0</p>
 			</div>
@@ -52,7 +52,7 @@
 
 	<!-- files about javascript -->
 	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script src="http://cdn.bootcss.com/jquery.touchswipe/1.6.18/jquery.touchSwipe.js"></script>
+	<!-- <script src="http://cdn.bootcss.com/jquery.touchswipe/1.6.18/jquery.touchSwipe.js"></script> -->
 	<script type="text/javascript" src="js/base.js"></script>
 	<script type="text/javascript" src="js/game2048.js"></script>
 </body>
