--- a/009.nightStar/index.html
+++ b/009.nightStar/index.html
@@ -16,7 +16,7 @@
 		抱歉，您的游览器不支持该效果！
 	</canvas>
 	<div id="dunes"></div>
-	<h1>Night Star</h1>
+	<h1>Night Stars</h1>
 
 	<!-- files about javascript -->
 	<script type="text/javascript" src="js/nightStar.js"></script>
