--- a/004.UILandingPage/index.html
+++ b/004.UILandingPage/index.html
@@ -25,22 +25,24 @@
 	<section class="section1" id="section1">
 		<!-- 导航 -->
 		<nav class="nav">
-			<div class="container clearfix">
-				<div class="">	
-					<div class="clearfix">			
-						<div class="logo">
-							<img src="imgs/logo.png" alt="logo">
+			<div class="wrap">
+				<div class="container clearfix">
+					<div class="">	
+						<div class="clearfix">			
+							<div class="logo">
+								<img src="imgs/logo.png" alt="logo">
+							</div>
+							<ul class="menu">
+								<li><a href="#section1" data-myid="section1" title="首页" class="active">首页</a></li>
+								<li><a href="#section2" data-myid="section2" title="三大保障">三大保障</a></li>
+								<li><a href="#section3" data-myid="section3" title="行业前景">行业前景</a></li>
+								<li><a href="#section4" data-myid="section4" title="课程大纲">课程大纲</a></li>
+								<li><a href="#section5" data-myid="section5" title="学员作品">学员作品</a></li>
+								<li><a href="#section6" data-myid="section6" title="师资力量">师资力量</a></li>
+								<li><a href="#section7" data-myid="section7" title="就业企业">就业企业</a></li>
+								<li><a href="#section9" data-myid="section9" title="我们是谁">我们是谁</a></li>
+							</ul>
 						</div>
-						<ul class="menu">
-							<li><a href="#section1" data-myid="section1" title="首页" class="active">首页</a></li>
-							<li><a href="#section2" data-myid="section2" title="三大保障">三大保障</a></li>
-							<li><a href="#section3" data-myid="section3" title="行业前景">行业前景</a></li>
-							<li><a href="#section4" data-myid="section4" title="课程大纲">课程大纲</a></li>
-							<li><a href="#section5" data-myid="section5" title="学员作品">学员作品</a></li>
-							<li><a href="#section6" data-myid="section6" title="师资力量">师资力量</a></li>
-							<li><a href="#section7" data-myid="section7" title="就业企业">就业企业</a></li>
-							<li><a href="#section9" data-myid="section9" title="我们是谁">我们是谁</a></li>
-						</ul>
 					</div>
 				</div>
 			</div>
