--- a/007.loadingAnimation/index.html
+++ b/007.loadingAnimation/index.html
@@ -25,8 +25,12 @@
 			<div class="inside inside_animate"></div>
 			<div class="outside outside_animate"></div>
 		</div>
-	</section>
 
+		<div class="section loading3">
+			<div class="circle"></div>
+		</div>
+	</section>
+	
 	<script type="text/javascript" src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
 	<script type="text/javascript" src="js/loadingAnimation.js"></script>
